<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_widget_material_button"
            android:textColor="@color/colorPrimary" />

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:clickable="true"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/main_widget_material_button"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/white"
            app:cornerRadius="18dp" />

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:clickable="true"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/main_widget_material_button"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />

        <android.support.design.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/main_widget_material_button"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/white"
            app:icon="@drawable/ic_photo_black_24dp"
            app:rippleColor="@color/color_ripple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_toggle_button"
            android:textColor="@color/colorPrimary" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_chip"
            android:textColor="@color/colorPrimary" />

        <android.support.design.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:chipSpacing="16dp"
            app:singleSelection="false">

            <android.support.design.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="Checkable"
                android:textAppearance="?android:attr/textAppearance"
                app:chipBackgroundColor="@color/colorAccent" />

            <android.support.design.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="Stroke"
                android:textAppearance="?android:attr/textAppearance"
                app:chipStrokeColor="@color/colorAccent"
                app:chipStrokeWidth="2dp" />

            <android.support.design.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:text="Corner Radius"
                android:textAppearance="?android:attr/textAppearance"
                app:checkedIconVisible="false"
                app:chipCornerRadius="4dp" />

            <android.support.design.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Chip Icon"
                android:textAppearance="?android:attr/textAppearance"
                app:chipIcon="@drawable/ic_photo_black_24dp"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/gray_deep"
                app:iconStartPadding="8dp"
                app:rippleColor="@color/colorAccent" />

            <android.support.design.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Close Icon"
                android:textAppearance="?android:attr/textAppearance"
                app:closeIconEnabled="true"
                app:rippleColor="@color/colorAccent" />
        </android.support.design.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_switch"
            android:textColor="@color/colorPrimary" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:checked="true"
            android:switchPadding="@dimen/text_margin"
            android:text="@string/main_widget_switch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_text_input_layout"
            android:textColor="@color/colorPrimary" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <EditText
                android:id="@+id/et_main_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_widget_edit_text"
                android:maxLength="20"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_check_box"
            android:textColor="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:checked="true"
            android:text="@string/main_widget_check_box_1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_widget_check_box_2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_widget_check_box_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_radio"
            android:textColor="@color/colorPrimary" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/main_widget_radio_button_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_widget_radio_button_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_widget_radio_button_3" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_seek_bar"
            android:textColor="@color/colorPrimary" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_progress_bar"
            android:textColor="@color/colorPrimary" />

        <ProgressBar
            android:id="@+id/pregress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/main_widget_spinner"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:entries="@array/spinner_array" />

        <TextView
            android:id="@+id/tv_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin_small"
            android:text="@string/banner_ad_title"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <include layout="@layout/ad_banner_main_widget" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>